# django-activiti

./: .bumpversion.cfg  .gitignore  .travis.yml  MANIFEST.in  README.rst  setup.cfg  tox.ini
django_activiti/: __init__.py  activiti_models.py  admin.py  api.py  apps.py  client.py  fields.py  forms.py  models.py  utils.py
django_activiti/migrations/: 0001_initial.py  0002_activiticonfig_tenant.py  0003_activiticonfig_enabled.py
docs/: index.rst  quickstart.rst
testapp/: admin.py  models.py  settings.py
tests/: test_admin.py  test_config_model.py
