# setuptools config
# see http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files
[metadata]
name = django-activiti
version = 0.1.2
description = Activiti/Alfresco Process Services integration for Django.
long_description = file: README.rst
url = https://github.com/maykinmedia/django-activiti
license = MIT
author = Maykin Media
author_email = support@maykinmedia.nl
keywords = bpmn, process engine, activiti, common ground
classifiers =
    Development Status :: 3 - Alpha
    Framework :: Django
    Framework :: Django :: 2.2
    Framework :: Django :: 3.0
    Intended Audience :: Developers
    Operating System :: Unix
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    django
    django-solo
    inflection
    requests
tests_require =
    pytest
    pytest-django
    requests_mock
    django-webtest
    tox
    isort
    black

[options.extras_require]
tests =
    pytest
    pytest-django
    requests_mock
    django-webtest
    tox
    isort
    black
pep8 = flake8
coverage = pytest-cov
docs =
    sphinx
    sphinx-rtd-theme
release =
    bumpversion
    twine

[options.packages.find]
exclude =
    tests
    testapp

# 3rd party configuration

[aliases]
test=pytest

[isort]
combine_as_imports = true
default_section = THIRDPARTY
include_trailing_comma = true
line_length = 88
multi_line_output = 3
skip = env,.tox,.history,.eggs
; skip_glob =
not_skip = __init__.py
known_django=django
known_first_party=django_activiti
sections=FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER

[tool:pytest]
DJANGO_SETTINGS_MODULE=testapp.settings
testpaths = tests
junit_family = xunit1

[pep8]
max-line-length=88
exclude=env,.tox,doc

[flake8]
max-line-length=88
exclude=env,.tox,doc

[zest.releaser]
create-wheel = yes

[coverage:run]
branch = true
cover_pylib = false
omit =
    tests/*
    testapp/*
include = django_activiti/*
